fix filters padding on mobile

--- a/app/assets/stylesheets/videos/index/filters.scss
+++ b/app/assets/stylesheets/videos/index/filters.scss
@@ -6,13 +6,13 @@
   width: 100%;
   max-width: 1660px;
   gap: 10px;
-  padding: 10px 0;
+  padding-top: 10px 0;
   background-color: var(--sl-color-neutral-0);
 }
 
 @media (max-width: 600px) {
   .filters {
-    padding: 10px 10px;
+    padding: 10px 10px 0px 10px;
   }
 }
 
